<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="label">My Nanodegree Project Portfolio!</string>
    <string name="popMovies1">Popular Movies - Stage 1</string>
    <string name="popMovies2">Popular Movies - Stage 2</string>
    <string name="productionize">Productionize 2 apps</string>
    <string name="buildBigger">Build It Bigger</string>
    <string name="capstone">Capstone Project</string>

</resources>
